Updated speedtest code with master

--- a/src/public/example-customSettings.html
+++ b/src/public/example-customSettings.html
@@ -113,9 +113,9 @@ function I(id){return document.getElementById(id);}
 
 var w=null; //speedtest worker
 var parameters={ //custom test parameters. See doc.md for a complete list
-	time_dl: 10, //download test lasts 10 seconds
-	time_ul: 10, //upload test lasts 10 seconds
-	count_ping: 20, //ping+jitter test does 20 pings
+	time_dl_max: 20, //download test lasts up to 20 seconds
+	time_ul_max: 20, //upload test lasts up to 20 seconds
+	count_ping: 15, //ping+jitter test does 15 pings
     getIp_ispInfo: false //will only get IP address without ISP info
 };
 function startStop(){
@@ -131,18 +131,18 @@ function startStop(){
 		w.postMessage('start '+JSON.stringify(parameters)); //run the test with custom parameters
 		I("startStopBtn").className="running";
 		w.onmessage=function(e){
-			var data=e.data.split(';');
-			var status=Number(data[0]);
+			var data=JSON.parse(e.data);
+			var status=data.testState;
 			if(status>=4){
 				//test completed
 				I("startStopBtn").className="";
 				w=null;
 			}
-			I("ip").textContent=data[4];
-			I("dlText").textContent=(status==1&&data[1]==0)?"...":data[1];
-			I("ulText").textContent=(status==3&&data[2]==0)?"...":data[2];
-			I("pingText").textContent=data[3];
-			I("jitText").textContent=data[5];
+			I("ip").textContent=data.clientIp;
+			I("dlText").textContent=(status==1&&data.dlStatus==0)?"...":data.dlStatus;
+			I("ulText").textContent=(status==3&&data.ulStatus==0)?"...":data.ulStatus;
+			I("pingText").textContent=data.pingStatus;
+			I("jitText").textContent=data.jitterStatus;
 		};
 	}
 }
