--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ function I(id){return document.getElementById(id);}
 </style>
 </head>
 <body>
-<h1>Speedtest-X</h1>
+<h1>单线程测速 (D-JP)</h1>
 <div id="startStopBtn" onclick="startStop()"></div>
 <div id="test">
     <div id="progressBar"><div id="progress"></div></div>
